fix(ui): make focus visible for button elements

--- a/react-components/src/components/@UIKit/Button/Button.module.scss
+++ b/react-components/src/components/@UIKit/Button/Button.module.scss
@@ -4,7 +4,6 @@
   color: var(--text-on-main);
   background-color: var(--main);
   border: none;
-  outline: transparent;
   cursor: pointer;
   transition-duration: 200ms;
   transition-property: opacity background-color;
