--- a/react-components/src/components/@UIKit/LinkButton/LinkButton.module.scss
+++ b/react-components/src/components/@UIKit/LinkButton/LinkButton.module.scss
@@ -12,6 +12,10 @@
     text-decoration: underline;
   }
 
+  &:focus {
+    text-decoration: underline;
+  }
+
   &:active {
     opacity: 0.75;
     color: var(--link-active);
